<resources>

    <string name="app_name">GasBuy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Don_Hang">Đơn hàng</string>
    <string name="so_ga">Sổ gas</string>
    <string name="qua_tang">Quà tặng</string>
    <string name="ho_tro">hỗ trợ</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="dat_mua">đặt mua</string>
    <string name="phan_hoi">Phản hồi</string>
    <string name="xoa_san_Pham">Xóa Sản Phẩm Khỏi Giỏ Hàng</string>
    <string name="xoa_1">Bạn muốn xóa sản phẩm </string>
    <string name="xoa_2">khỏi giỏ hàng của bạn phải không</string>
    <string name="Huy">HỦY BỎ</string>
    <string name="xoa">XÓA</string>
    <string name="tong_tien">Tổng số tiền </string>
    <string name="thay_doi">Thay đổi thông tin </string>
    <string name="Dia_chi">Địa chỉ</string>
    <string name="So_dien_thoai">Số điện thoại</string>
    <string name="ten">Tên</string>
    <string name="Dang_ky">Đăng Ký</string>
    <string name="title_activity_san_pham">SanPhamActivity</string>
    <string name="action_settings">Settings</string>
    <string name="DM_sanPham">Danh Mục Sản Phẩm </string>
    <string name="title_main">Giỏ Hàng </string>
    <string name="thong_tin">Thông tin sản phẩm</string>
    <string name="thong_so">Thông số kỹ thuật</string>
    <string name="bao_hanh">Bảo Hành</string>
    <string name="mua_ngay">Mua Ngay</string>
    <string name="cua_hang">Cửa Hàng </string>
    <string name="feedback">Mô tả vấn đề bạn muốn phản hồi</string>
    <string name="feedback1">Giao hàng trễ</string>
    <string name="feedback2">Thái độ phục vụ nhân viên chưa tốt</string>
    <string name="Rate">Hãy cho chúng tôi biết đánh giá của bạn!</string>
    <string name="feedback3">Chất lượng sản phẩm kém không đạt yêu cầu</string>
    <string name="Setting1">Rung khi chạm</string>
    <string name="Setting2">Thông báo khi sắp hết Gas</string>
    <string name="Setting3">Nhận tin khuyến mại</string>

    <string name="tensanpham">Tên </string>
    <string name="giatien">Giá tiền</string>
    <string name="trangthai">Trạng thái</string>
    <string name="huy">Hủy</string>
    <string name="stt">STT</string>
    <string name="ngaythang">Ngày</string>
    <string name="sanpham">Sản Phẩm</string>
    <string name="khuyenmai">Khuyến mãi</string>
    <string name="tien">Tiền</string>
    <string name="gui">Gửi</string>
    <string name="call">Gọi tổng đài</string>
    <string-array name="tinh">
        <item>Hà Nội</item>
    </string-array>
    <string-array name="quan">
        <item>Ba Đình</item>
        <item>Bắc Từ Liêm</item>
        <item>Cầu Giấy</item>
        <item>Đống Đa</item>
        <item>Hà Đông</item>
        <item>Hai Bà Trưng</item>
        <item>Hoàn Kiếm</item>
        <item>Hoàng Mai</item>

    </string-array>
<string-array name="badinh">
    <item>Cống Vị</item>
    <item>Điện Biên</item>
    <item>Đội Cấn</item>
    <item>Giảng Võ</item>
    <item>Kim Mã</item>
    <item>Liễu Giai</item>
    <item>Ngọc Hà</item>
    <item>Ngọc Khánh</item>
    <item>Nguyễn Trung Trực</item>
    <item>Phúc Xá</item>
    <item>Quán Thánh</item>

</string-array>
    <string-array name="bac_tu_liem">
        <item> Cổ Nhuế 1</item>
        <item>Đông Ngạc</item>
        <item> Đức Thắng</item>
        <item>Liên Mạc</item>
        <item>Minh Khai</item>
        <item>Phú Diễn</item>
        <item>Phúc Diễn</item>
        <item> Tây Tựu</item>
    </string-array>
    <string-array name="cau_giay">
        <item> Dịch Vọng</item>
        <item> Dịch Vọng Hậu</item>
        <item> Mai Dịch</item>
        <item> Nghĩa Đô</item>
        <item> Nghĩa Tân</item>
        <item> Quan Hoa</item>
        <item> Trung Hòa</item>
        <item> Yên Hòa</item>
    </string-array>
    <string-array name="dong_da">
        <item>Cát Linh</item>
        <item>Hàng Bột</item>
        <item> Khâm Thiên</item>
        <item> Khương Thượng</item>
        <item>Kim Liên</item>
        <item> Láng Hạ</item>
        <item>Láng Thượng</item>
        <item> Nam Đồng</item>
    </string-array>
    <string-array name="ha_dong">
        <item>Biên Giang</item>
        <item> Đồng Mai</item>
        <item> Dương Nội</item>
        <item>Hà Cầu</item>
        <item>La Khê</item>
        <item> Mộ Lao</item>
        <item> Nguyễn Trãi</item>
        <item> Phú La</item>
        <item>Yết Kiêu</item>
    </string-array>
    <string-array name="hai_ba_trung">
        <item></item>
        <item> Bạch Đằng</item>
        <item>Bách Khoa</item>
        <item>Bạch Mai</item>
        <item> Bùi Thị Xuân</item>
        <item>Cầu Dền</item>
        <item>Cầu Dền</item>
        <item>Cầu Dền</item>
    </string-array>
    <string-array name="hoan_kiem">
        <item>Chương Dương Độ</item>
        <item> Cửa Đông</item>
        <item> Cửa Nam</item>
        <item>Đồng Xuân</item>
        <item> Hàng Bạc</item>
        <item>Hàng Bài</item>
        <item> Hàng Bồ</item>
        <item>Hàng Bông</item>
    </string-array>
    <string-array name="hoang_mai">
        <item>Đại Kim</item>
        <item>Định Công</item>
        <item> Giáp Bát</item>
        <item>Hoàng Liệt</item>
        <item>Hoàng Văn Thụ</item>
        <item>Lĩnh Nam</item>
    </string-array>
</resources>