<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8c8a8a"/>
    <LinearLayout
        android:id = "@+id/relativeLayout1"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation="horizontal">
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#8c8a8a"/>
        <TextView

            android:id="@+id/ten"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/tensanpham" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#8c8a8a"/>




        <TextView
            android:id="@+id/giatien"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/giatien" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#8c8a8a"/>
        <TextView

            android:id="@+id/trangthai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/trangthai" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#8c8a8a"/>
    </LinearLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8c8a8a"/>
</RelativeLayout>
