<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="com.example.blue.gasbuy.Activity.PhanhoiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="Chi tiết"
                android:textColor="#7d080808"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FFF2F2F2"
                android:paddingRight="10dp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TableRow
                    android:background="#FFF"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feedback1"
                        android:textColor="#000" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFF2F2F2"
                    android:paddingRight="10dp" />

                <TableRow

                    android:background="#FFF"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feedback2"
                        android:textColor="#000" />

                    <CheckBox
                        android:id="@+id/checkBox3"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFF2F2F2"
                    android:paddingRight="10dp" />

                <TableRow


                    android:background="#FFF"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feedback3"
                        android:textColor="#000" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:id="@+id/checkBox1"
                        android:layout_height="wrap_content" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFF2F2F2"
                    android:paddingRight="10dp" />

            </TableLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Ý Kiến Khác"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#FFF2F2F2"
                android:paddingRight="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtFeedBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/duongvien_goctron"
                    android:gravity="top"
                    android:hint="@string/feedback"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btSend_FeedBack"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#e6e1e1"
                android:text="Gửi"
                android:textColor="#000" />
            <!--<RatingBar-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>
