<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_khach_hang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.example.blue.gasbuy.Activity.KhachHangActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:textAllCaps="true"
            android:id="@+id/text_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/khach_hang"
            android:gravity="center"

            android:textColor="@color/colorAccent"
            android:textSize="60dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ten" />

        <EditText
            android:id="@+id/text_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/text_tb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="Tỉnh/Thành phố" />

            <Spinner
                android:entries="@array/tinh"
               android:id="@+id/spinner_tinh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="Quận/huyện" />

            <Spinner
                android:entries="@array/quan"
                android:id="@+id/spinner_quan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="Phường, xã" />

            <Spinner
               android:id="@+id/spinner_phuong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Dia_chi" />

        <EditText
            android:id="@+id/text_diachi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/text_tb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/So_dien_thoai" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+84"
                android:textSize="@dimen/text_tb" />

            <EditText
                android:id="@+id/text_sdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
android:inputType="number"
                android:textSize="@dimen/text_tb" />
        </LinearLayout>

        <Button
            android:id="@+id/buton_dangky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:clickable="true"
            android:text="@string/Dang_ky"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_tb" />
    </LinearLayout>
</LinearLayout>
